# delphi-rs

./: .gitignore  Cargo.toml  build.rs
examples/: fpc-test.rs
src/: lib.rs  macros.rs
tests/: fpc-test.rs
tests/delphi/: empty.pp  infiniteloop.pp  returnone.pp
