[package]
authors = ["kpence"]
description = "..."
documentation = "..."
homepage = "https://github.com/kpence/delphi-rs"
keywords = ["delphi", "borland", "register", "function", "trampoline"]
license = "BSD-2-Clause"
name = "delphi"
readme = "README.org"
repository = "https://github.com/kpence/delphi-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glob = "0.3.0"

[dev-dependencies]
rstest = "0.12.0"
